Test a version 0.1.0 to support npm version operations.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "name": "pgm-settings",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Get program settings and merge json documents",
+  "homepage": "https://github.com/shathaway/pgm-settings#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/shathaway/pgm-settings.git"
+  },
+  "bugs": {
+    "url": "https://github.com/shathaway/pgm-settings/issues"
+  },
   "main": "index.js",
   "scripts": {
     "test": "cd test && mocha --reporter spec testing.js"
@@ -14,8 +22,8 @@
     "environment",
     "arguments"
   ],
-  "author": "Steven J. Hathaway",
-  "license": "MIT",
+  "author": "Steven J. Hathaway <shathawa@e-z.net>",
+  "license": "(MIT OR ISC)",
   "dependencies": {
     "minimist": "^1.2.5",
     "promise": "^8.1.0",
